# confuse

./: Cargo.toml  README.md
_archive/: lib.rs
src/: lib.rs
src/input/: attribute.rs  keywords.rs  mod.rs  pattern.rs  rule.rs  syntax.rs
src/parser/: attribute.rs  mod.rs  pattern.rs  rule.rs  section.rs  segment.rs
tests/toml/: integration_test_toml_file.rs  integration_test_toml_package.rs
